fix: Removed .allauth-form-inner-content a because it was causing the form links to not have a strong contrast

--- a/static/base.css
+++ b/static/base.css
@@ -659,10 +659,6 @@ color: #fff;
   border-color: #222;
 }
 
-.allauth-form-inner-content a {
-color: #17a2b8; /* text-info */
-}
-
 
 /* Product Card Image Consistency */
 .card-img-top {
